# mexico_city_urban_network_analysis

./: .gitignore  LICENSE  README.md  phase_4_guide.md  phase_5_guide.md
data/processed/: crosswalk.csv  edges.csv  nodes.csv  override_candidates.csv
julia/: Project.toml
julia/src/: cascade.jl  graph_load.jl  random_walk.jl
manual_overrides/: station_merge_overrides.csv
python/: pyproject.toml
python/cdmx_gtfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/data/processed/: capacity_assumptions.csv  load_flujo.csv  load_topological.csv  node_capacity.csv
python/src/: __init__.py  build_graph.py  capacity_assumptions.py  deduplication.py  load_flujo.py  load_topological.py  loading_data.py  node_capacity.py  paso_1_visualizations.py  paso_3_transfer_matrix.py  paso_4_interactive_map.py  phase_4_analysis.py  visualization.py
tests/: test_dedup.py  test_graph_integrity.py
